Mejoras de diseño en todas las paginas y pagina de olimpia, ya organizada con su diseño

--- a/IFM.html
+++ b/IFM.html
@@ -27,8 +27,8 @@
 
     <nav id="navbar">
       <div class="logo">
-        <img src="assets/icons/escudo.png" alt="logoExample" />
-        <img src="assets/icons/IFM_Nombre.png" alt="" />
+        <img src="assets/icons/ifmlogorb.png" alt="logoExample" />
+        <!-- <img src="assets/icons/IFM_Nombre.png" alt="" /> -->
       </div>
       <div class="botones">
         <a href="index.html">Innovate</a>
@@ -49,7 +49,7 @@
         <video id="video2" src="assets/videos/gol2.mp4" muted></video>
       </div>
       <div class="contain-img">
-        <img src="assets/icons/IFM_NoStars.png" alt="Logo Principal" />
+        <img src="assets/icons/ifmlogorb.png" alt="Logo Principal" />
       </div>
     </header>
 
