--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </article> -->
     <main>
       <div class="image-contain">
-        <img src="assets/images/instagram1.jpg" alt="imagen1" />
+        <img src="assets/images/instagram1.jpeg" alt="imagen1" />
         <img src="assets/images/instagram2.jpg" alt="imagen2" />
       </div>
 
@@ -25,7 +25,7 @@
       <button id="position-right">SOBRE NOSOTROS</button>
 
       <div id="overlay" class="hidden"></div>
-      
+
       <div id="sidePanel" class="hidden">
         <h1 style="color: #1f4e79">Acerca de Nosotros</h1>
         <br />
@@ -63,7 +63,7 @@
       <script src="js/cards.js"></script>
 
       <div class="logo-contain">
-        <img src="assets/icons/ifmlogoia2.png" alt="imagen-logo" />
+        <img src="assets/icons/innovativelogorb.png" alt="imagen-logo" />
         <div class="buttoms">
           <a href="IFM.html" id="desing-ifm">
             <span></span>
