--- a/innov8.html
+++ b/innov8.html
@@ -24,7 +24,7 @@
     </div>
     <nav id="navbar">
       <div class="logo">
-        <img src="assets/icons/logoExample.png" alt="logoExample" />
+        <img src="assets/icons/innov8logorb.png" alt="logoExample" />
       </div>
       <div class="botones">
         <a href="index.html">Innovate</a>
@@ -42,6 +42,7 @@
       <div class="static-image">
         <img src="assets/images/marketing1.jpg" alt="" />
       </div>
+      <img src="assets/icons/innov8logorb.png" alt="Logo Principal" />
     </header>
 
     <section>
