--- a/olimpia.html
+++ b/olimpia.html
@@ -6,81 +6,78 @@
     <link rel="stylesheet" href="css/olimpia/normalize.css" />
     <link rel="stylesheet" href="css/olimpia/home.css" />
     <link rel="stylesheet" href="css/olimpia/info.css" />
-    <link rel="stylesheet" href="css/olimpia/services.css" />
+    <link rel="stylesheet" href="css/olimpia/article.css" />
     <link rel="stylesheet" href="css/olimpia/footer.css" />
     <link rel="stylesheet" href="css/olimpia/general.css" />
     <link rel="stylesheet" href="css/olimpia/section.css" />
     <link rel="stylesheet" href="css/olimpia/contact.css" />
+    <link rel="stylesheet" href="css/olimpia/nav.css" />
+    <script src="js/scroll.js"></script>
     <!-- <link rel="icon" href="assets/icons/favicon.ico" /> -->
     <title>C.D. Olimpia</title>
   </head>
   <body>
+    <div class="back">
+      <a href="index.html"
+        ><img src="assets/svg/arrow_back.svg" alt="Back"
+      /></a>
+    </div>
+    <nav id="navbar">
+      <div class="logo">
+        <img src="assets/icons/olimpialogorb.png" alt="logoExample" />
+      </div>
+      <div class="botones">
+        <a href="index.html">Innovate</a>
+        <span></span>
+        <a href="#home">Home</a>
+        <span></span>
+        <a href="#our-services">Companny</a>
+        <span></span>
+        <a href="#contact">Contact</a>
+        <span></span>
+      </div>
+    </nav>
+
     <header>
       <div class="static-image">
         <img src="assets/images/workout1.jpg" alt="" />
       </div>
-      <img
-        src="assets/icons/logoExample.png"
-        alt="logoExample"
-        id="logoExample"
-      />
+      <img src="assets/icons/olimpialogorb.png" alt="Logo Principal" />
     </header>
 
-    <section>
-      <h1>NUESTRO EQUIPO</h1>
-    </section>
+    <section></section>
     <main>
       <div id="contain-1">
         <img src="assets/images/workout2.jpg" alt="image" />
         <div class="contain-text">
-          <h1>INNOV8</h1>
+          <h1>C.D. OLIMPIA</h1>
+          <br />
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
-            provident laboriosam est sed deserunt voluptate vitae temporibus vel
-            mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
-            fugiat quod aliquam! Lorem ipsum dolor sit amet consectetur,
-            adipisicing elit. Saepe, provident laboriosam est sed deserunt
-            voluptate vitae temporibus vel mollitia? Dicta porro nemo veniam
-            consequuntur eos asperiores quam fugiat quod aliquam! Lorem ipsum
-            dolor sit amet consectetur, adipisicing elit. Saepe, provident
-            laboriosam est sed deserunt voluptate vitae temporibus vel mollitia?
-            Dicta porro nemo veniam consequuntur eos asperiores quam fugiat quod
-            aliquam! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Saepe, provident laboriosam est sed deserunt voluptate vitae
-            temporibus vel mollitia? Dicta porro nemo veniam consequuntur eos
-            asperiores quam fugiat quod aliquam!
+            C.D. Olimpia se dedica a la formación y desarrollo de jóvenes
+            futbolistas, ofreciendo programas de entrenamiento de alta calidad
+            diseñados para fomentar el talento y la pasión por el deporte.
+            Nuestra misión es cultivar habilidades futbolísticas y valores
+            fundamentales como el trabajo en equipo, la disciplina y la
+            perseverancia. A través de una combinación de técnicas de
+            entrenamiento avanzadas y un enfoque integral, C.D. Olimpia se
+            compromete a desarrollar atletas completos y preparados para
+            enfrentar los desafíos tanto dentro como fuera del campo de juego.
           </p>
         </div>
       </div>
     </main>
 
     <article>
-      <div class="title">
-        <h1>NUESTROS SERVICIOS</h1>
+      <div class="titulo">
+        <h1>Instalaciones</h1>
       </div>
-      <div class="contain">
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/club.svg" alt="icon" />
-            <h1>Asesoría a Clubes</h1>
-          </div>
-          <p>
-            Innov8 se especializa en desarrollo de marca, asociaciones
-            estratégicas y gestión creativa.
-          </p>
-        </div>
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="assets/svg/player.svg" alt="icon" />
-            <h1>Promoción de Jugador</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
+      <div class="imagenes">
+        <img src="assets/images/equipo.jpg" alt="equipo" />
+        <img
+          src="assets/images/equipo_entrenamiento.jpg"
+          alt="equipo_entrenamiento"
+        />
+        <img src="assets/images/entrenadores.jpg" alt="entrenadores" />
       </div>
     </article>
 
@@ -102,16 +99,16 @@
         </div>
         <div class="ubi">
           <div class="content-img">
-            <img src="assets/images/colombia.jpg" alt="img-ubi" />
-            <h1>Medellin</h1>
+            <img src="assets/images/medellin.jpg" alt="img-ubi" id="colombia" />
+            <h2>Medellin</h2>
           </div>
           <div class="content-img">
-            <img src="assets/images/dallas.jpg" alt="img-ubi" />
-            <h1>Dallas</h1>
+            <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
+            <h2>Dallas</h2>
           </div>
           <div class="content-img">
-            <img src="assets/images/miami.jpg" alt="img-ubi" />
-            <h1>Miami</h1>
+            <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
+            <h2>Miami</h2>
           </div>
         </div>
       </div>
