Implementacion de boton que cambia el idioma a la pagina web y su funcion

--- a/IFM.html
+++ b/IFM.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/IFM/section.css" />
     <link rel="stylesheet" href="css/IFM/general.css" />
     <link rel="stylesheet" href="css/IFM/contact.css" />
-    <link rel="icon" href="assets/icons/favicon.ico" />
+    <link rel="icon" href="assets/icons/ifmfavicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
     <script src="js/scroll.js"></script>
@@ -32,10 +32,11 @@
         <a href="#contact" data-en="Contact" data-es="Contacto">Contacto</a>
       </div>
       <div class="button_language" style="padding-right: 20px">
-        <button id="languageToggle">En 🇺🇸 / Es 🇲🇽</button>
+        <button id="languageToggle">English</button>
         <script src="js/change_language.js"></script>
       </div>
     </nav>
+    
     <header id="volver">
       <div class="contain">
         <video id="video1" src="assets/videos/gol1.mp4" muted></video>
