--- a/olimpia.html
+++ b/olimpia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,33 +12,29 @@
     <link rel="stylesheet" href="css/olimpia/section.css" />
     <link rel="stylesheet" href="css/olimpia/contact.css" />
     <link rel="stylesheet" href="css/olimpia/nav.css" />
+    <link rel="icon" href="assets/icons/olimpiafavicon.ico" />
     <script src="js/scroll.js"></script>
-    <!-- <link rel="icon" href="assets/icons/favicon.ico" /> -->
     <title>C.D. Olimpia</title>
   </head>
   <body>
-    <div class="back">
-      <a href="index.html"
-        ><img src="assets/svg/arrow_back.svg" alt="Back"
-      /></a>
-    </div>
     <nav id="navbar">
       <div class="logo">
         <img src="assets/icons/olimpialogorb.png" alt="logoExample" />
       </div>
       <div class="botones">
-        <a href="index.html">Innovate</a>
-        <span></span>
-        <a href="#home">Home</a>
-        <span></span>
-        <a href="#our-services">Companny</a>
-        <span></span>
-        <a href="#contact">Contact</a>
-        <span></span>
+        <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
+        <a href="#our-services" data-en="Company" data-es="Compañia"
+          >Compañia</a
+        >
+        <a href="#contact" data-en="Contact" data-es="Contacto">Contacto</a>
+      </div>
+      <div class="button_language" style="padding-right: 20px">
+        <button id="languageToggle">English</button>
+        <script src="js/change_language.js"></script>
       </div>
     </nav>
 
-    <header>
+    <header id="volver">
       <div class="static-image">
         <img src="assets/images/workout1.jpg" alt="" />
       </div>
@@ -52,7 +48,10 @@
         <div class="contain-text">
           <h1>C.D. OLIMPIA</h1>
           <br />
-          <p>
+          <p
+            data-en="C.D. Olimpia is dedicated to the formation and development of young soccer players, offering soccer players, offering high quality training programs designed to foster talent and designed to foster talent and passion for the sport. Our mission is to nurture soccer skills and core values such as teamwork values such as teamwork, discipline and perseverance. discipline and perseverance. Through a combination of advanced training techniques advanced training techniques and a holistic approach, C.D. Olimpia is committed to committed to developing well-rounded athletes ready to meet the challenges challenges both on and off the field."
+            data-es="C.D. Olimpia se dedica a la formación y desarrollo de jóvenes futbolistas, ofreciendo programas de entrenamiento de alta calidad diseñados para fomentar el talento y la pasión por el deporte. Nuestra misión es cultivar habilidades futbolísticas y valores fundamentales como el trabajo en equipo, la disciplina y la perseverancia. A través de una combinación de técnicas de entrenamiento avanzadas y un enfoque integral, C.D. Olimpia se compromete a desarrollar atletas completos y preparados para enfrentar los desafíos tanto dentro como fuera del campo de juego."
+          >
             C.D. Olimpia se dedica a la formación y desarrollo de jóvenes
             futbolistas, ofreciendo programas de entrenamiento de alta calidad
             diseñados para fomentar el talento y la pasión por el deporte.
@@ -69,7 +68,7 @@
 
     <article>
       <div class="titulo">
-        <h1>Instalaciones</h1>
+        <h1 data-en="Publications" data-es="Publicaciones">Publicaciones</h1>
       </div>
       <div class="imagenes">
         <img src="assets/images/equipo.jpg" alt="equipo" />
@@ -83,7 +82,7 @@
 
     <div class="section">
       <div class="content-contact">
-        <h1>CONTACTO</h1>
+        <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
         <br />
         <p>
           <img src="assets/svg/mail.svg" alt="email" /> info@innovativegroup.com
@@ -95,7 +94,7 @@
       </div>
       <div class="content-ubi">
         <div class="title">
-          <h1>UBICACIONES</h1>
+          <h1 data-en="LOCATIONS" data-es="UBICACIONES">UBICACIONES</h1>
         </div>
         <div class="ubi">
           <div class="content-img">
@@ -136,5 +135,12 @@
         /></a>
       </div>
     </footer>
+    <div class="back">
+      <button
+        onclick="document.getElementById('volver').scrollIntoView({ behavior: 'smooth' });"
+      >
+        <img src="assets/svg/arrow_upward.svg" alt="Volver" />
+      </button>
+    </div>
   </body>
 </html>
