Modificacion en diseño de las paginas y archivos agregados para la prueba de botones y animacion

--- a/olimpia.html
+++ b/olimpia.html
@@ -63,21 +63,14 @@
             enfrentar los desafíos tanto dentro como fuera del campo de juego.
           </p>
         </div>
+        <div class="contain-service">
+          
+        </div>
       </div>
     </main>
 
     <article>
-      <div class="titulo">
-        <h1 data-en="Publications" data-es="Publicaciones">Publicaciones</h1>
-      </div>
-      <div class="imagenes">
-        <img src="assets/images/equipo.jpg" alt="equipo" />
-        <img
-          src="assets/images/equipo_entrenamiento.jpg"
-          alt="equipo_entrenamiento"
-        />
-        <img src="assets/images/entrenadores.jpg" alt="entrenadores" />
-      </div>
+      <div class="titulo"></div>
     </article>
 
     <div class="section">
@@ -115,13 +108,7 @@
 
     <footer>
       <div class="contain">
-        <p>Innovative Football Management</p>
-        <p>Direccion: CLL 12A #34-56</p>
-        <p>Correo: Example@email.com</p>
-      </div>
-      <div class="contain">
         &copy; Innovative Football Management. All rights reserved.
-        <p>legal informacion</p>
       </div>
       <div id="redes">
         <a href="instagram.com"
