Pre-Diseño de los botones y la animacion de los servicios

--- a/olimpia.html
+++ b/olimpia.html
@@ -44,7 +44,7 @@
     <section></section>
     <main>
       <div id="contain-1">
-        <img src="assets/images/workout2.jpg" alt="image" />
+        <img src="assets/images/workout2.jpg" alt="image" id="fondo" />
         <div class="contain-text">
           <h1>C.D. OLIMPIA</h1>
           <br />
@@ -64,10 +64,47 @@
           </p>
         </div>
         <div class="contain-service">
-          
+          <div class="button-container" id="services-1">
+            <button>
+              <img src="assets/svg/add_circle.svg" alt="services" />
+            </button>
+            <div id="content-service-1" class="content">
+              <h1>Servicio 1</h1>
+              <p>Descripción del Servicio 1</p>
+            </div>
+          </div>
+          <div class="button-container" id="services-2">
+            <button>
+              <img src="assets/svg/add_circle.svg" alt="services" />
+            </button>
+            <div id="content-service-2" class="content">
+              <h1>Servicio 2</h1>
+              <p>Descripción del Servicio 2</p>
+            </div>
+          </div>
+          <div class="button-container" id="services-3">
+            <button>
+              <img src="assets/svg/add_circle.svg" alt="services" />
+            </button>
+            <div id="content-service-3" class="content">
+              <h1>Servicio 3</h1>
+              <p>Descripción del Servicio 3</p>
+            </div>
+          </div>
+          <div class="button-container" id="services-4">
+            <button>
+              <img src="assets/svg/add_circle.svg" alt="services" />
+            </button>
+            <div id="content-service-4" class="content">
+              <h1>Servicio 4</h1>
+              <p>Descripción del Servicio 4</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
+
+    <script src="js/cards_service.js"></script>
 
     <article>
       <div class="titulo"></div>
